@@ -1,3 +1,5 @@
+(12/30/11) - v8.4.1 - bugfix
+- Fixed: NameCollection.yml clearing entries with only 1 player on server restart
 (12/28/11) - v8.4.0 - feature build
 - Added extended name service
 - Fixed: Fresh installations should work now
